--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,123 @@
+/*
+==============
+Global
+==============
+*/
+:root {
+  --el-orange: #F4982B;
+  --el-charc: #2d2d2d;
+  --el-grey: #959595;
+}
+/*
+==============
+Typography
+==============
+*/
+
+@font-face {
+  font-family: 'Sinkin Sans';
+  src: url('./webfonts/SinkinSans-400Regular-webfont.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Sinkin Sans';
+  src: url('./webfonts/SinkinSans-700Bold-webfont.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'Sinkin Sans';
+  src: url('./webfonts/SinkinSans-900XBlack-webfont.woff') format('woff');
+  font-weight: 900;
+  font-style: normal;
+
+}
+
+h1, h2, h3, h4 {
+  margin: 0
+}
+
+.summary-h1 {
+  text-transform: uppercase;
+  font-size: 2rem;
+  color: white;
+}
+
+.summary-h2 {
+  font-weight: 900;
+  font-size: 3rem;
+  text-transform: uppercase;
+  text-align: right;
+}
+
+.summary-h3,
+.config-h3 {
+  font-size: 1.25rem;
+  text-transform: uppercase;
+}
+
+.config-h3 {
+  margin: 0 1em;
+  color: white;
+}
+
+.summary-h3 {
+  color: var(--el-grey);
+}
+
+.config-h4 {
+  text-transform: uppercase;
+  font-size: 0.625rem;
+  font-weight: 400;
+  color: var(--el-orange);
+}
+
+.config-option {
+  font-size: 1.5rem;
+  margin: 0 0 1em;
+  font-weight: 700;
+  text-transform: capitalize;
+}
+
+.summary-body-intro {
+  font-size: 1.25rem;
+  line-height: 1.8;
+}
+
+/* TODO remove initial indent from ul but keep text indent */
+/* ul {
+  list-style-position: inside;
+  padding-left: 0;
+} */
+
+li::marker {
+  color: var(--el-orange);
+}
+
+li {
+  color: var(--el-charc);
+  margin-bottom: 7px;
+}
+
+/*
+==============
+Components/Layout
+==============
+*/
+
+.container {
+  max-width: 960px;
+  margin: 20px auto;
+  background: white;
+  box-shadow: 0 0 10px var(--el-grey);
+}
+
 .App {
-  text-align: center;
+  /* text-align: center; */
 }
 
 .App-logo {
@@ -17,10 +135,9 @@
   background-color: #282c34;
   /* min-height: 100vh; */
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+  /* font-size: calc(10px + 2vmin); */
   color: white;
   padding-bottom: 30px;
 }
